...
    )
)

val sampleBookings = listOf(
    Event(
        id = "3",
        title = "Drake Concert",
        date = LocalDate.of(2024, 1, 23),
        startTime = LocalDateTime.of(2024, 1, 23, 20, 0),
        endTime = LocalDateTime.of(2024, 1, 23, 23, 0),
        ticketPrice = 200.0,
        location = "Laval, QC",
        status = "BOOKED",
...
                contentDescription = null,
                modifier = Modifier.fillMaxSize(),
                contentScale = ContentScale.Crop
            )

            Text(
                text = "Search and filter events by date, location, and category:",
                color = Color.White,
                modifier = Modifier
                    .align(Alignment.TopCenter)
                    .background(Color.Black.copy(alpha = 0.4f), RoundedCornerShape(12.dp))
                    .padding(horizontal = 12.dp, vertical = 6.dp)
            )
...
            ) {
                Column(
                    modifier = Modifier
                        .padding(16.dp)
                ) {

                    Text("Search Events")

                    Spacer(modifier = Modifier.height(12.dp))

                    Box(modifier = Modifier.weight(1f)) {
                        FilterEventForm(viewModel = filterEventViewModel)
                    }
...
                            },
                            colors = ButtonDefaults.buttonColors(
                                containerColor = ButtonYellow
                            ),
                            modifier = Modifier.testTag("search_button")
                        ) {
                            Text("Search")
                        }

                        Spacer(modifier = Modifier.weight(1f))

                        Button(
                            onClick = {
...
                            },
                            colors = ButtonDefaults.buttonColors(
                                containerColor = ButtonCancelRed
                            ),
                            modifier = Modifier.testTag("cancel_button")
                        ) {
                            Text("Cancel")
                        }


                    }
                }
            }
...
                .clickable { showDialog = true }
                .padding(horizontal = 16.dp, vertical = 14.dp)
                .testTag("search_bar")
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    text = "Search for an event...",
                    color = TextGreen,
                    modifier = Modifier.weight(1f)
                )

                Icon(
                    Icons.Default.Search,
...

    @Composable
    fun AvailableEventsSection(events: List<Event>) {

        Column {
            Text(
                text = "Available events:",
                style = MaterialTheme.typography.titleMedium,
            )

            Spacer(modifier = Modifier.height(8.dp))

            LazyRow(
...
            Row(
                modifier = Modifier
                    .fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Text(
                    "Booked events:",
                    style = MaterialTheme.typography.titleMedium
                )
            }

            Spacer(modifier = Modifier.height(8.dp))

...
                            },
                            colors = ButtonDefaults.outlinedButtonColors(
                                contentColor = ButtonCancelRed
                            ),
                            border = BorderStroke(1.dp, ButtonCancelRed),
                            shape = RoundedCornerShape(20.dp),
                            modifier = Modifier.testTag("clear_button")
                        ) {
                            Row(
                                verticalAlignment = Alignment.CenterVertically,
                                horizontalArrangement = Arrangement.Center
                            ) {
                                Text(
...
