...
) {
    Card(
        shape = RoundedCornerShape(12.dp),
        modifier = modifier
            .fillMaxWidth()
            .padding(vertical = 6.dp)
            .testTag("booked_event_card")
            .clickable(onClick = onClick),
        colors = CardDefaults.cardColors(containerColor = BackgroundGrey)
    ) {
        Row(
            modifier = Modifier
                .padding(horizontal = 16.dp, vertical = 12.dp)
...
