...
    }

    Card(
        shape = RoundedCornerShape(12.dp),
        modifier = Modifier
            .width(180.dp)
            .testTag("available_event_card")
            .clickable { onClick() },
        colors = CardDefaults.cardColors(containerColor = BackgroundGrey),
    ) {
        Column(
            modifier = Modifier.padding(10.dp)
        ) {
...
