...
        val minPrice = value.minPrice.toDoubleOrNull()

        if (maxPrice != null && minPrice != null && maxPrice < minPrice) {
            _uiState.update {
                it.copy(
                    isError = true,
                    errorMessage = "Max Price must be greater than min price")
            }

        }

        val startTime = value.start
        val endTime = value.end
...
